[package]
name = "lcsrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
fsrs = "5"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
rusqlite_migration = "1"
url = "2"
