[package]
name = "lcsrs"
version = "0.1.0"
edition = "2024"
description = "A CLI for spaced-repetition scheduling of LeetCode-style problems"
license = "GPL-3.0-or-later"
repository = "https://github.com/vulncraft/lcsrs"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
fsrs = "5"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
rusqlite_migration = "1"
url = "2"
